--- a/src/PortefolioCMS/Themes/Theme_zervan/css/styles.css
+++ b/src/PortefolioCMS/Themes/Theme_zervan/css/styles.css
@@ -1,4 +1,4 @@
-
+/* SLB PAGINA CSS START */ 
 .page-wrapper > .row > div{
     height: 200px;
     background-color: blue;
@@ -7,4 +7,42 @@
 .page-wrapper > .row > div:nth-child(even){
     background-color: red;
 }
+/* SLB PAGINA CSS EIND */ 
 
+/* PORTFOLIOMAIN PAGINA CSS START */ 
+.page-content{ 
+    width: 90%; margin: 0 auto 0 auto; 
+}
+
+/* Haalt de standaard navbar margin-bottom en rondingen weg */ 
+.navbar {
+margin-bottom: 0;
+border-radius: 0;
+}
+  
+/* Zet een hoogte voor de grid zo dat .sidenav 100% kan zijn */
+.row.content {height: 450px}
+ 
+/* Zet 100% hoogte en een achtergrond kleur */
+.sidenav {
+padding-top: 20px;
+background-color: #f1f1f1;
+height: 100%;
+}
+    
+/* Padding voor de footer en de tekst/achtergrond kleur */
+footer {
+background-color: #555;
+color: white;
+padding: 10px;
+}
+    
+/* Doormiddel van kleiner maken pasth het menu zich aan. */
+@media screen and (max-width: 767px) {
+.sidenav {
+height: auto;
+padding: 15px;
+}
+.row.content {height:auto;} 
+}
+/* PORTFOLIOMAIN PAGINA CSS START */ 
