--- a/src/PortefolioCMS/Themes/Theme_kevinTabak/css/styles.css
+++ b/src/PortefolioCMS/Themes/Theme_kevinTabak/css/styles.css
@@ -1,4 +1,3 @@
-
 .page-wrapper > .row > div{
     height: 200px;
     background-color: blue;
@@ -7,4 +6,6 @@
 .page-wrapper > .row > div:nth-child(even){
     background-color: red;
 }
-
+.navbar{
+    border-radius: 0px;
+}
