--- a/src/PortefolioCMS/Themes/Theme_kevinTabak/css/styles.css
+++ b/src/PortefolioCMS/Themes/Theme_kevinTabak/css/styles.css
@@ -9,3 +9,11 @@
 .navbar{
     border-radius: 0px;
 }
+.footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #101010;
+}
