--- a/web/assets/site/lib/cover.css
+++ b/web/assets/site/lib/cover.css
@@ -219,3 +219,15 @@ body {
     color: black !important;
     text-shadow: none;
 }
+
+.custom-form {
+    max-width: 250px;
+    padding: 15px;
+    margin: 0 auto;
+}
+
+.custom-form input {
+    color: black;
+    padding: 5px 5px;
+    margin: 5px 5px;
+}
