--- a/src/PortfolioCMS/Themes/Theme_kevinTabak/css/styles.css
+++ b/src/PortfolioCMS/Themes/Theme_kevinTabak/css/styles.css
@@ -56,3 +56,13 @@
     margin: 0 auto;
     float: none;
 }
+.row{
+    margin-left: 55px;
+}
+#title{
+    width: 350px;
+    background-color: rgba(0,0,0,0.5);
+    margin: 0 auto;
+    border-radius: 25px;
+    padding-bottom: 1px;
+}
