--- a/src/PortfolioCMS/Themes/Theme_kevinTabak/css/styles.css
+++ b/src/PortfolioCMS/Themes/Theme_kevinTabak/css/styles.css
@@ -66,3 +66,14 @@
     border-radius: 25px;
     padding-bottom: 1px;
 }
+.thumbnail {
+    padding: 0 0 15px 0;
+    border: none;
+    border-radius: 0;
+}
+
+.thumbnail img {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 10px;
+}
