--- a/web/assets/admin/css/light-bootstrap-dashboard.css
+++ b/web/assets/admin/css/light-bootstrap-dashboard.css
@@ -1235,9 +1235,9 @@ body > .navbar-collapse[data-color="purple"]:after {
   -o-user-select: none;
   user-select: none;
   /*   this code is for fixing safari bug with hidden overflow for border-radius   */
-  -webkit-mask: url("../img/mask.png") 0 0 no-repeat;
+  -webkit-mask: url("assets/admin/img/mask.png") 0 0 no-repeat;
   -webkit-mask-size: 60px 24px;
-  mask: url("../img/mask.png") 0 0 no-repeat;
+  mask: url("assets/admin/img/mask.png") 0 0 no-repeat;
 }
 
 .has-switch.deactivate {
