--- a/src/PortfolioCMS/Themes/Theme_anouk/css/styles.css
+++ b/src/PortfolioCMS/Themes/Theme_anouk/css/styles.css
@@ -111,6 +111,10 @@ h6 {
     border-bottom: 1px solid #e7e7e7;
 }
 
+.content-section-c {
+    padding: 50px 0;
+    background-color: #f8f8f8;
+}
 .section-heading {
     margin-bottom: 30px;
 }
