--- a/src/PortfolioCMS/Themes/Theme_joris/css/styles.css
+++ b/src/PortfolioCMS/Themes/Theme_joris/css/styles.css
@@ -1,4 +1,4 @@
-
+/* SLB PAGINA CSS START */ 
 .page-wrapper > .row > div{
     height: 200px;
     background-color: blue;
@@ -7,19 +7,44 @@
 .page-wrapper > .row > div:nth-child(even){
     background-color: red;
 }
+/* SLB PAGINA CSS EIND */ 
 
-.pdf-viewer{
-    height: 90vh;
-}
-.pdf-menu-wrapper{
-    height: 90vh;
-}
-.pdf-title-wrapper{
-    height: 10vh;
-    text-align: center;
+/* PORTFOLIOMAIN PAGINA CSS START */ 
+.page-content{ 
+    height: 100%;
+    width: 90%;
+    margin: 0 auto 0 auto; 
 }
 
-
-#body{
-    background-color: black;
+/* Haalt de standaard navbar margin-bottom en rondingen weg */ 
+.navbar {
+margin-bottom: 0;
+border-radius: 0;
 }
+  
+/* Zet een hoogte voor de grid zo dat .sidenav 100% kan zijn */
+.row.content {height: 800px}
+ 
+/* Zet 100% hoogte en een achtergrond kleur */
+.sidenav {
+padding-top: 20px;
+background-color: #d7dbdd;
+height: 100%;
+}
+    
+/* Padding voor de footer en de tekst/achtergrond kleur */
+footer {
+background-color: #555;
+color: white;
+padding: 10px;
+}
+    
+/* Doormiddel van kleiner maken pasth het menu zich aan. */
+@media screen and (max-width: 767px) {
+.sidenav {
+height: auto;
+padding: 15px;
+}
+.row.content {height:auto;} 
+}
+/* PORTFOLIOMAIN PAGINA CSS START */ 
