--- a/web/assets/Theme_kevinTabak/css/styles.css
+++ b/web/assets/Theme_kevinTabak/css/styles.css
@@ -52,3 +52,28 @@
 #DownCV {
     outline: none;
 }
+#CTable{
+    margin: 0 auto;
+    float: none;
+}
+.row{
+    margin-left: 55px;
+}
+#title{
+    width: 350px;
+    background-color: rgba(0,0,0,0.5);
+    margin: 0 auto;
+    border-radius: 25px;
+    padding-bottom: 1px;
+}
+.thumbnail {
+    padding: 0 0 15px 0;
+    border: none;
+    border-radius: 0;
+}
+
+.thumbnail img {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 10px;
+}
