--- a/web/assets/admin/css/adminstyle.css
+++ b/web/assets/admin/css/adminstyle.css
@@ -59,3 +59,9 @@
 .table-upgrade td:nth-child(3){
     text-align: center;
 }
+label {
+    float: left;
+    text-align: right;
+    margin-right: 15px;
+    width: 100px;
+}
