--- a/web/assets/Theme_joris/css/styles.css
+++ b/web/assets/Theme_joris/css/styles.css
@@ -1,25 +1,3 @@
 
-.page-wrapper > .row > div{
-    height: 200px;
-    background-color: blue;
-}
 
-.page-wrapper > .row > div:nth-child(even){
-    background-color: red;
-}
-
-.pdf-viewer{
-    height: 90vh;
-}
-.pdf-menu-wrapper{
-    height: 90vh;
-}
-.pdf-title-wrapper{
-    height: 10vh;
-    text-align: center;
-}
-
-
-#body{
-    background-color: black;
-}
+/*# sourceMappingURL=styles.css.map */
