--- a/src/PortfolioCMS/Themes/Theme_marco/css/styles.css
+++ b/src/PortfolioCMS/Themes/Theme_marco/css/styles.css
@@ -22,7 +22,7 @@ p.small{
     font-size:16px
 }
 a,a.active,a:active,a:focus,a:hover{
-    color:#18BC9C;outline:0
+    outline:0
 }
   .fa-angle-double-down
     {
@@ -132,7 +132,7 @@ header .intro-text {
     letter-spacing:1px
 }
 .navbar-custom .navbar-nav li a:hover{
-    color:#18BC9C;
+   
     outline:0
 }
 .navbar-custom .navbar-nav li a:active,.navbar-custom .navbar-nav li a:focus{
@@ -150,9 +150,9 @@ header .intro-text {
     border-color:#fff
 }
 .navbar-custom .navbar-toggle:focus,.navbar-custom .navbar-toggle:hover{
-    background-color:#18BC9C;
+    
     color:#fff;
-    border-color:#18BC9C
+    
 }
 @media (min-width:768px){
        .navbar-custom{
@@ -253,9 +253,7 @@ section.contact
     top:0;
     opacity:1
 }
-.floating-label-form-group-with-focus label{
-    color:#18BC9C
-}
+
 
 form .row:first-child .floating-label-form-group{
     border-top:1px solid #eee
@@ -290,7 +288,7 @@ footer .footer-below{
 }
 
 .btn-outline.active,.btn-outline:active,.btn-outline:focus,.btn-outline:hover{
-    color:#18BC9C;
+   
     background:#fff;
     border:2px solid #fff
 }
