--- a/web/assets/Theme_marco/css/styles_1.css
+++ b/web/assets/Theme_marco/css/styles_1.css
@@ -56,6 +56,8 @@ header{
 header{
     text-align:center;
     background:white;
+    border-bottom:20px solid;
+    border-color:#233140;
 }
 header .container{
     padding-top:200px;
@@ -188,6 +190,9 @@ section.language
 {
     background:white;
     color:darkblue;
+     border-top:20px solid;
+    border-bottom:20px solid;
+     border-color:#233140;
 }
 section.contact
 {
@@ -432,3 +437,22 @@ footer .footer-below{
         float:left;
     }
     
+ .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover {
+    color: yellow;
+    background-color: transparent;
+}
+
+.btn-success:hover {
+    color: #fff;
+    background-color: yellow;
+    border-color: yellow;
+    color:darkblue;
+}
+.navbar-default .navbar-nav .open .dropdown-menu>li>a {
+    color: white;
+}
+.dropdown-menu > li > a:focus, .dropdown-menu > li > a:hover {
+    color: #262626;
+    text-decoration: none;
+    background-color: yellow;
+}
