--- a/web/assets/Theme_kevinTabak/css/styles.css
+++ b/web/assets/Theme_kevinTabak/css/styles.css
@@ -43,6 +43,11 @@
     border-color: transparent;
     color: #fff !important;
 }
+
+.dropdown-menu{
+    background-color: #f4511e;
+}
+
 .bg-grey {
     background-color: #f6f6f6;
 }
