--- a/web/assets/Theme_joris/css/styles.css
+++ b/web/assets/Theme_joris/css/styles.css
@@ -39,3 +39,17 @@ body{
 .pdf-object{
     height: 70vh;
 }
+
+@media (min-width: 768px) and (max-width: 992px){
+    .header-text-size{
+        font-size: 40px;
+    }
+}
+
+
+@media (max-width: 768px) {
+    .header-text-size{
+        font-size: 40px;
+    }
+}
+
